<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerName"
    android:background="#FFCCBC">

    <TextView
        android:id="@+id/PlayerName_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/PlayerName_Title"
        android:textColor="#D18484"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PlayerName_Player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PlayerName_Player1"
        app:layout_constraintBottom_toTopOf="@+id/PlayerName_Player1_Name"
        app:layout_constraintStart_toStartOf="@+id/PlayerName_Player1_Name" />

    <TextView
        android:id="@+id/PlayerName_Player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PlayerName_Player2"
        app:layout_constraintBottom_toTopOf="@+id/PlayerName_Player2_Name"
        app:layout_constraintStart_toStartOf="@+id/PlayerName_Player2_Name" />

    <EditText
        android:id="@+id/PlayerName_Player1_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/PlayerName_Hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlayerName_Title" />

    <EditText
        android:id="@+id/PlayerName_Player2_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/PlayerName_Hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlayerName_Player1_Name" />

    <Button
        android:id="@+id/button2"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:background="@drawable/play_button"
        android:onClick="startgame"
        android:text="@string/PlayerName_Start"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlayerName_Player2_Name" />
</androidx.constraintlayout.widget.ConstraintLayout>